# TeleDM

./: .gitignore  CONFIGURATION_SETUP.md  Makefile  README.md  pyproject.toml
docs/: CLI.md  Configuration.md  FAQ.md  README.md  TroubleShooting.md  Usage.md  config.ini.example  development.md
src/TeleDM/: cli.py  configure.py  database.py  downloadManager.py  gui.py  main.py  telegramClient.py  utils.py
